buttons: fix jumping sizes for combobox normal/backdrop states
We should never set border-width on wildcarded childrens, or other
childrens will grow in size when changing state.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -211,7 +211,6 @@ column-header:last-child .button:active:focus {
 .button:backdrop,
 GtkComboBox.combobox-entry .entry:backdrop,
 GtkComboBox.combobox-entry .button:backdrop,
-GtkComboBox *:backdrop, 
 .entry:backdrop,
 GtkSwitch.trough:backdrop,
 .trough:backdrop {
@@ -236,11 +235,10 @@ GtkSwitch.trough:backdrop,
 .primary-toolbar .raised .button:backdrop,
 .primary-toolbar GtkComboBox.combobox-entry .entry:backdrop,
 .primary-toolbar GtkComboBox.combobox-entry .button:backdrop,
+.primary-toolbar GtkComboBox .button:backdrop,
 .primary-toolbar .entry:backdrop,
 .inline-toolbar.toolbar .button:backdrop,
-.inline-toolbar.toolbar .button:backdrop:insensitive,
-.primary-toolbar GtkComboBox *:backdrop,
-.primary-toolbar GtkComboBox *:backdrop:insensitive { 
+.inline-toolbar.toolbar .button:backdrop:insensitive { 
     border-image: url("borders/primary-toolbar-generic-border-unfocused-dark.svg") 4 / 4px stretch;
     border-radius: 3px;
     border-width: 2px;
